--- a/app/assets/stylesheets/partials/modules/_section-nav.scss
+++ b/app/assets/stylesheets/partials/modules/_section-nav.scss
@@ -10,7 +10,7 @@
     Style Guide -> Modules -> Section Nav
 */
 
-/* This is a hack so we can hide the nav contextual in production. */
+/* --Temp styles to hide from production environment-- */
 .section-nav > .container--position-temp {
    @include to-rem(padding-top padding-bottom, $spacing-half);
    @extend %clear-fix;
@@ -26,6 +26,8 @@
      @include to-rem(height, 65);
    }
  }
+
+
 
 .section-nav {
 	@include font-size($font-size-sml, 1.5);
