--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -53,9 +53,13 @@
       &.drop-down-menu__target--alt-width-palm {@include to-rem(width, $drop-down-width);}
     }
 
-    /* Reduce the width at this breakpoint */
+    /* Reduce widths at this breakpoint */
     @include respond-min($iphone-landscape) {
+      /* Default version */
       @include to-rem(width, $drop-down-width);
+
+      /* Alternative version */
+      .drop-down-menu--alt & {@include to-rem(width, 170);}
     }
 
     /* Reduce the top margin for IE 9/8 */
@@ -104,6 +108,15 @@
       color: $color-light-txt;
       @include to-rem(padding-top padding-bottom, $spacing-micro);
       @include to-rem(padding-left padding-right, $spacing-half);
+    }
+
+    /* Alternative header */
+    .drop-down-menu__hdr-alt {
+      display: block;
+      @include font-size($font-size);
+      border-bottom: 1px solid $color-grey-1;
+      @include to-rem(padding-bottom, $spacing-third);
+      @include to-rem(margin-bottom, $spacing-third+$spacing-quarter);
     }
 
     /* Divider */
@@ -169,7 +182,7 @@
 
           /* Hover and focus states, need to increase the specificity so as to override hover/focus styles from any outer modules */
           .drop-down-menu &:hover,
-          .drop-down-menu &:focus {color: lighten($color-base-txt, 10%);}
+          .drop-down-menu &:focus {color: $color-link-hover;}
         }
       }
 
@@ -178,6 +191,23 @@
         display: inline-block;
         /* Need to override the helper class `!important` keyword */
         max-width: 90% !important;
+      }
+    }
+
+    /* Alternative list */
+    .drop-down-menu__list-alt > li {
+      @include to-rem(margin-top, $spacing-third);
+
+      &:first-child {margin-top: 0;}
+
+      /* Links */
+      a {
+        display: block;
+        color: $color-light-txt;
+
+        /* Hover and focus states */
+        &:hover,
+        &:focus {color: $color-link-hover;}
       }
     }
 
