--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -117,7 +117,7 @@ $header-color-link-hover: $color-brand !default;
 			/* Increase logo size and swap out for white version for 'Centre home page hero banner' at this breakpoint */
 			@include respond-min($non-palm) {
 				.header--hero & {
-					background: cloudinary-url("logo-white-beta.svg") no-repeat 0 0;
+					background: image-url("logo-white-beta.svg") no-repeat 0 0;
 					display: inline-block;
 					width: 126px;
 					height: 41px;
