--- a/app/views/stores/_header_with_banner.html.erb
+++ b/app/views/stores/_header_with_banner.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="hide-visually"><%= @store.name %> storefront</h1>
+  <h1 class="hide-visually" itemprop="name"><%= @store.name %></h1>
   <div class="flexslider flexslider--contain-controls" style="background-image: url(<%= cl_image_path(@store.storefront, width: 2048, crop: :limit, quality: 25, format: :jpg, type: :fetch) %>);">
     <ul class="slides">
       <li>
