Converting all stores images to WebP and mods to featured product tile images

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -127,9 +127,7 @@
                               locals: {
                                 result: product,
                                 options: {
-                                  width: 288,
-                                  height: 288,
-                                  crop: :pad
+                                  height: 288
                                 }
                               }
                             %>
