--- a/app/views/stores/_header_with_banner.html.erb
+++ b/app/views/stores/_header_with_banner.html.erb
@@ -1,9 +1,9 @@
 <header>
   <h1 class="hide-visually" itemprop="name"><%= @store.name %></h1>
-  <div class="flexslider flexslider--contain-controls" style="background-image: url(<%= cl_image_path(@store.storefront, width: 2048, crop: :limit, quality: 25, format: :jpg, type: :fetch) %>);">
+  <div class="flexslider flexslider--contain-controls" style="background-image: url(<%= cl_image_path(@store.storefront, width: 2048, crop: :limit, quality: 25, format: :auto, type: :fetch) %>);">
     <ul class="slides">
       <li>
-        <%= fetch_image_tag @store.storefront, alt: "#{@store.name} banner", width: 2048, crop: :limit, quality: 25, format: :jpg %>
+        <%= fetch_image_tag @store.storefront, alt: "#{@store.name} banner", width: 2048, crop: :limit, quality: 25, format: :auto %>
       </li>
       <%= render 'description' %>
     </ul>
