--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -108,11 +108,11 @@
                   <div class="stores-list__logo hide-fully--palm">
                     <div class="vert-align">
                       <div class="vert-align__inner">
-                        <span class="preloader preloader--light js-disabled-hide" data-image-src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
+                        <span class="preloader preloader--light js-disabled-hide" data-image-src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF', fetch_format: 'auto') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
                           <span class="preloader__spinner"></span>
                           <em class="hide-visually">Loading, please wait&#8230;</em>
                         </span>
-                        <noscript><img src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF') %>" alt="<%= "#{store.name} logo" %>"></noscript>
+                        <noscript><img src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, crop: :pad, background: 'rgb:FFFFFF', fetch_format: 'auto') %>" alt="<%= "#{store.name} logo" %>"></noscript>
                       </div>
                     </div>
                   </div>
