Various touch ups to CSS partials

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -4,10 +4,7 @@
 
 /*
   Usage:
-    Detail views for 'Products', 'Events' and 'Deals'.
-
-  Note:
-    At desktop size the detail views go into a dialog.
+    Detail views mainly for 'Products', 'Events' and 'Deals'.
 
   Demo:
     Style Guide -> Modules -> Detail View
