--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -4,7 +4,7 @@
 
 /*
   Usage:
-    Filters and sorting.
+    Filters and sorting, used for browsing 'Products'.
 
   Note:
     A lot of styles are being used from the 'Drop down menu' module.
