--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -48,7 +48,7 @@
         <h2 class="tab__content__hdr"><%= ["This week", "Next week"][week_number] || "#{week.first.date '%-d %b'} - #{week.last.date '%-d %b'}"%></h2>
 
         <%# Grid %>
-        <div class="grid grid--gutter-dbl grid--mrg-base-non-palm grid--non-linear-non-palm">
+        <div class="grid grid--gutter-dbl grid--mrg-base-lap-sml">
 
           <%# Centre hours %>
           <div class="grid__item non-palm-one-half lap-sml-one-whole">
