--- a/app/assets/stylesheets/partials/forms/_base.scss
+++ b/app/assets/stylesheets/partials/forms/_base.scss
@@ -9,17 +9,19 @@ label {cursor: pointer;}
 .txt-input,
 textarea,
 .no-touch select {
+  width: 100%;
+  @include to-rem(padding, $spacing-third $spacing-half);
   color: $color-base-txt;
   border-radius: $border-radius;
   border: 1px solid $color-grey-1;
-	background: #fff;
-	@include prefix(transition, border 0.2s linear);
+  background: #fff;
+  @include prefix(transition, border 0.2s linear);
 
-	/* Focus state */
-	&:focus {
-		outline: none;
-		border-color: darken($color-grey-1, 12%);
-	}
+  /* Focus state */
+  &:focus {
+    outline: none;
+    border-color: darken($color-grey-1, 12%);
+  }
 }
 
 .txt-input,
