--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,7 +48,7 @@
 
 <%# Expose Product categories for non JS users %>
 <noscript>
-  <nav role="navigation" class="island box mrg-base--top">
+  <nav role="navigation" class="island box mrg-base mrg-base--top">
     <h2>Product categories</h2>
     <ul class="mrg-base">
       <% @categories.each do |category| %>
@@ -66,10 +66,10 @@
 </noscript>
 <%# //Expose Product categories for non JS users %>
 
-<% if @search.products.present? %>
-  <div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters filters--pin-board">
+<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use the product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
 
-    <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use these product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
+<% if @search.products.present? %>
+  <div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters filters--pin-board js-disabled-hide">
 
     <div class="filters__filter-sort">
 
