Move styles to be more in context - WSF-5840

--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -2,8 +2,11 @@
    @LAYOUT -> NATIONAL HOMEPAGE
    ====================================================================================== */
 
-/* Class added to `body` */
+/* Styles for `body` element */
 .national {
+  padding-bottom: 0;
+  background-color: $color-dark-txt;
+
   /* Remove cursor and border on `abbr` when it's in an anchor */
   a abbr {
     cursor: pointer;
