--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -10,6 +10,15 @@
     Style Guide -> Modules -> Detail View
 */
 
+/* Styles for `body` element at this breakpoint */
+@include respond-max($palm) {
+  .page-detail-view {
+    background-color: #fff;
+    padding-bottom: 0;
+  }
+}
+
+/* Start module */
 .detail-view {
   @include font-size($font-size-sml);
 
