--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -16,6 +16,10 @@
 		Style Guide -> Modules -> Stores / Maps
 */
 
+/* Styles for `body` element */
+.stores {padding-bottom: 0;}
+
+/* Start module */
 .stores-maps {
   position: absolute;
   z-index: 2;
