--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -5,7 +5,7 @@
       attrs[:class] = 'is-active'
     end
     link_to(
-      category.short_name,
+      category.name,
       centre_products_path(:super_cat => category.code),
       attrs
     )
