--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -106,10 +106,10 @@
                   <form action="<%= current_url %>", method="get", class="js-store-trading-hours mrg-base", id="store-<%= week_number %>">
                     <div class="flag">
                       <div class="flag__image two-fifths lap-sml-two-sixths">
-                        <label for="store_id-<%= week_number %>" class="txt-bold">Store Hours</label>
+                        <label for="store-id-<%= week_number %>" class="txt-bold">Store Hours</label>
                       </div>
                       <div class="flag__body three-fifths lap-sml-four-sixths">
-                        <%= select_tag :store_id, options_from_collection_for_select(@stores_with_hours, :id, :name, params[:store_id]), class: 'one-whole js-store_id', id: "store_id-#{week_number}" %>
+                        <%= select_tag :store_id, options_from_collection_for_select(@stores_with_hours, :id, :name, params[:store_id]), class: 'one-whole', id: "store-id-#{week_number}" %>
                         <%= submit_tag 'Search', class: 'js-enabled-hide' %>
                       </div>
                     </div>
@@ -174,11 +174,17 @@
 <%- content_for :javascript do -%>
   <%# Run 'Tabs' plugin %>
   <%= javascript_include_tag 'vendor/jquery.tabs' %>
-  <%= javascript_include_tag 'jquery-extensions/jquery.store_trading_hours' %>
 
   <script>
   $(function() {
     $('.tabs').tabs();
+
+    /* Submit store trading hours request on change */
+    $(".js-store-trading-hours").each(function(index,value) {
+      $("#store-id-"+index).change(function () {
+        $("#store-"+index).submit();
+      })
+    })
   });
   </script>
 <%- end -%>
