--- a/app/views/products/redirection.html.erb
+++ b/app/views/products/redirection.html.erb
@@ -11,6 +11,6 @@
 
 <script>
   setTimeout(function(){
-    window.location.replace("<%= @product_tracking_url %>")
+    window.location.replace("<%= @product_tracking_url.html_safe %>")
   }, 500)
 </script>
