--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -60,6 +60,8 @@
 .grid--gutterless,
 .grid--center {margin-left: 0;}
 
+/* -Gutters- */
+
 /* Gutterless */
 .grid--gutterless > .grid__item {padding-left: 0;}
 
@@ -80,6 +82,8 @@
   /* Grid item */
   > .grid__item {@include to-rem(padding-left, $grid-gutter-half);}
 }
+
+/* -Bottom spacing- */
 
 /* Remove bottom margin */
 .grid--flush {
@@ -111,13 +115,13 @@
 	}
 }
 
-/* Apply bottom margins at non-palm */
+/* Apply bottom margin only for 'Non-palm' */
 @include respond-min($non-palm) {
 	/* Base bottom margin */
 	.grid--mrg-base-non-palm > .grid__item {@include to-rem(margin-bottom, $grid-gutter);}
 }
 
-/* Apply bottom margins at lap-sml between the grid elements for linearised version */
+/* Apply bottom margin only for 'Lap small' when linearised */
 @include respond-range-fixed(lap-sml) {
   /* Base bottom margin */
   .grid--mrg-base-lap-sml {
@@ -142,7 +146,7 @@
 /* Reversed */
 .grid--rev > .grid__item {float: right;}
 
-/* Change stacking order for palm - only works for 2 cols */
+/* Change stacking order for 'Palm' - only works for 2 cols */
 @include respond-max($palm) {
 	.grid--rev-stack {
 		display: table;
@@ -168,7 +172,7 @@
 	}
 }
 
-/* Table at non-palm */
+/* Table at 'Non-palm' */
 @include respond-min($non-palm) {
 	.grid--table-non-palm {
 		display: table;
