--- a/app/assets/stylesheets/partials/modules/_section-nav.scss
+++ b/app/assets/stylesheets/partials/modules/_section-nav.scss
@@ -120,7 +120,7 @@
 	}
 
 		/* Select list label */
-		.flag__image {
+		.flag__img {
 			color: $color-light-txt;
 			@include font-size($font-size-sml, 1.5);
 
