--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -105,7 +105,7 @@
                   <%# Store filter %>
                   <form action="<%= current_url %>", method="get", class="js-store-trading-hours mrg-base", id="store-<%= week_number %>">
                     <div class="flag">
-                      <div class="flag__image two-fifths lap-sml-two-sixths">
+                      <div class="flag__img two-fifths lap-sml-two-sixths">
                         <label for="store-id-<%= week_number %>" class="txt-bold">Store Hours</label>
                       </div>
                       <div class="flag__body three-fifths lap-sml-four-sixths">
