--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -32,7 +32,7 @@
     <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
       <div class="container container--position">
         <div class="flag flag--shrink-wrap">
-          <div class="flag__image hide-visually">
+          <div class="flag__img hide-visually">
             <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
           </div>
           <div class="flag__body">
