--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -5,9 +5,9 @@
     <% if @centre.facebook.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--facebook icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -22,9 +22,9 @@
     <% if @centre.twitter.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--twitter icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -39,9 +39,9 @@
     <% if @centre.instagram.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--instagram icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -56,9 +56,9 @@
     <% if @centre.pinterest.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--pinterest icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -73,9 +73,9 @@
     <% if @centre.youtube.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--youtube icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
@@ -90,9 +90,9 @@
     <% if @centre.google_plus.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
         <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__image">
+          <div class="flag__img">
             <div class="box islet">
-              <span class="icon icon--google-plus icon--base-color icon--fixed-width" aria-hidden="true"></span>
+              <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
             </div>
           </div>
           <div class="flag__body">
